kubernetes/apps/main/shlink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink
  namespace: shlink
spec:
  type: ClusterIP
  selector:
    app: shlink
  ports:
    - name: http
      port: 8080
      targetPort: http
