kubernetes/apps/main/shlink/web-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shlink-web-client
  namespace: shlink
spec:
  type: ClusterIP
  selector:
    app: shlink-web-client
  ports:
    - name: http
      port: 8080
      targetPort: http
