kubernetes/apps/main/shlink/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink
  namespace: shlink
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    lbipam.cilium.io/ips: "10.69.50.67"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - 16e.link
        - admin.16e.link
      secretName: shlink-tls
  rules:
    - host: 16e.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink
                port:
                  number: 8080
    - host: admin.16e.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink-web-client
                port:
                  number: 8080
